# mineral-mapping

./: .gitignore  README.md  pyproject.toml  setup.py  test_package.py
config/: config.yaml  custom_config.yaml  default copy.json  default.json
examples/: basic_usage.py
src/: main.py
src/core/: config.py  file_handler.py  parameter.py  preprocessing.py  processing.py  raster_ops.py  tile_processing.py  ui.py  utils.py  vector_ops.py  vectroscopy.py
tests/: test_config.py
vectroscopy/: __init__.py  __main__.py  config.py  file_handler.py  main.py  parameter.py  raster_ops(old).py  tile_processing.py  vector_ops.py  vectroscopy.py
vectroscopy/config/: __init__.py  config.py  file_utilities.py  output_manager.py  parameter_manager.py  process_manager.py
vectroscopy/config_files/: JPL_config.yaml  config.json  config.yaml  custom_config.yaml
vectroscopy/processing/: __init__.py  processing_pipeline.py  processing_utils.py  raster_processor.py  vectorization.py
vectroscopy/raster_ops/: __init__.py  raster_edit.py  raster_filters.py  raster_utils.py
vectroscopy/vector_ops/: __init__.py  vector_utils.py  vectorize.py  zonal_stats.py
